# WeatherflowTempestSVGLogger

./: CMakeLists.txt  README.md  WeatherflowTempestSVGLogger.sln  WeatherflowTempestSVGLogger.vcxproj  postinst  postrm  prerm  weatherflowtempestsvglogger-version.h.in  weatherflowtempestsvglogger.cpp  weatherflowtempestsvglogger.service  wimiso8601.cpp  wimiso8601.h
.github/workflows/: cmake-single-platform.yml
